@startuml firestore
' --- Entity --- '
entity "Auth" {
  Authentication Userエンティティ
  ==
  - UID:      string [Key]
  - Email:    string [Unique]
  - Password: string
  ==
}

entity "User" {
  Firestore Userエンティティ
  ==
  - UID:          string [Key]
  - Name:         string
  - Email:        string [Unique]
  - ThumbnailURL: string
  - GroupIDs:     []string [Reference]
  - CreatedAt:    timestamp
  - UpdatedAt:    timestamp
  ==
}

entity "Group" {
  Firestore Groupエンティティ
  ==
  - UID:           string [Key]
  - Name:          string
  - Description:   string
  - ThumbnailURL:  string
  - InvitedEmails: []string
  - UserIDs:       []string [Reference]
  - BoardIDs:      []string [SubCollection]
  - CreatedAt:     timestamp
  - UpdatedAt:     timestamp
  ==
}

entity "Board" {
  Firestore Boardエンティティ
  ==
  - UID:             string [Key]
  - Name:            string
  - Closed:          boolean
  - ThumbnailURL:    string
  - BackgroundColor: string
  - Labels:          []string
  - GroupID:         string [ParentDocument]
  - ListIDs:         []string [SubCollection]
  - CreatedAt:       timestamp
  - UpdatedAt:       timestamp
  ==
}

entity "BoardList" {
  Firestore BaordListエンティティ
  ==
  - UID:       string [Key]
  - Name:      string
  - Color:     string
  - BoardID:   string [ParentDocument]
  - TaskIDs:   []string [Reference]
  - CreatedAt: timestamp
  - UpdatedAt: timestamp
  ==
}

entity "Task" {
  Firestore Taskエンティティ
  ==
  - UID:             string [Key]
  - Name:            string
  - Description:     string
  - DeadlinedAt:     timestamp
  - Labels:          []string
  - AttachmentURLs:  []string
  - BoardListID:     string [Reference]
  - AssignedUserIDs: []string [Reference]
  - CheckListIDs:    []string [SubCollection]
  - CommentIDs:      []string [SubCollecition]
  - CreatedAt:       timestamp
  - UpdatedAt:       timestamp
  ==
}

entity "CheckList" {
  Firestore CheckListエンティティ
  ==
  - UID:             string [Key]
  - Name:            string
  - DeadlinedAt:     timestamp
  - AssignedUserIDs: []string [Reference]
  - CreatedAt:       timestamp
  - UpdatedAt:       timestamp
  ==
}

entity "Comment" {
  Firestore Commentエンティティ
  ==
  - UID:       string [Key]
  - Content:   string
  - UserID:    string [Reference]
  - CreatedAt: timestamp
  - UpdatedAt: timestamp
  ==
}

' --- Relation --- '
"Auth"      ||--|| "User"
"Board"     ||--|{ "BoardList"
"BoardList" ||--|{ "Task"
"Group"     ||--|{ "Board"
"Group"     }|--|{ "User"
"Task"      ||--|{ "CheckList"
"Task"      }|--|{ "User"
"Task"      ||--|{ "Comment"
"User"      ||--|{ "CheckList"
"User"      ||--|{ "Comment"

@enduml
